@@ -26,14 +26,15 @@ FLAGS_TO_PASS = \
 	'USR=$(USR)'
 
 headers := \
-	complex_bf.h complex_typedef.h filter.h float16.h flt2fr.h \
+	complex_bf.h complex_typedef.h cycle_count.h cycle_count_bf.h \
+	filter.h float16.h flt2fr.h \
 	fr2x16_base.h fr2x16.h fr2x16_math.h fr2x16_typedef.h \
 	fract2float_conv.h fract_base.h fract_complex.h fract.h \
 	fract_math.h fract_typedef.h gcc.h \
 	i2x16_base.h i2x16.h i2x16_math.h i2x16_typedef.h \
 	math_bf.h math_const.h matrix.h means.h \
 	r2x16_base.h r2x16_typedef.h r4x16_typedef.h raw_typedef.h \
-	stats.h util.h vector.h video.h window.h
+	stats.h util.h vector.h video.h window.h xcycle_count.h
 
 ifneq ($(LIBC_HAS_NO_CMATH),)
 headers += complex.h
